[gd_scene load_steps=9 format=3 uid="uid://b8p5d5p1vsqbt"]

[ext_resource type="Script" path="res://StarmapView/StarmapOverlay.gd" id="1_ljty6"]
[ext_resource type="Texture2D" uid="uid://vm16s0u0gnw8" path="res://assets/starmap/journal.png" id="2_dtfiu"]

[sub_resource type="Gradient" id="Gradient_yve8p"]
offsets = PackedFloat32Array(0, 0.552083, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.526042, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8q3ge"]
gradient = SubResource("Gradient_yve8p")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_g8v2w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gradient:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_motfm"]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gradient:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_me1av"]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gradient:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutsceneContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1080)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afi1g"]
_data = {
"RESET": SubResource("Animation_g8v2w"),
"enter": SubResource("Animation_motfm"),
"exit": SubResource("Animation_me1av")
}

[node name="StarmapOverlay" type="Control"]
z_index = 20
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljty6")

[node name="Gradient" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_8q3ge")

[node name="CutsceneContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Test" type="TextureRect" parent="CutsceneContainer"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_dtfiu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_afi1g")
}
autoplay = "enter"
speed_scale = 4.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
